@@ -1,6 +1,14 @@
 package com.github.mengweijin.vitality.framework.cache;
 
+import com.github.mengweijin.vitality.framework.cache.listener.DefaultCacheEventListener;
 import lombok.AllArgsConstructor;
+import org.ehcache.config.builders.CacheConfigurationBuilder;
+import org.ehcache.config.builders.CacheEventListenerConfigurationBuilder;
+import org.ehcache.config.builders.ExpiryPolicyBuilder;
+import org.ehcache.config.builders.ResourcePoolsBuilder;
+import org.ehcache.core.events.CacheEventListenerConfiguration;
+import org.ehcache.event.EventType;
+import org.ehcache.jsr107.Eh107Configuration;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.context.annotation.Configuration;
 
@@ -21,8 +29,8 @@ import org.springframework.context.annotation.Configuration;
  * 1、使用注解
  * KEY_EXPRESSION 为 @Cacheable 中的 key 值，默认使用 SPEL 表达式，若要拼接普通文本，需要用单引号包裹起来。
  * <p>
- * Example 1: @Cacheable(value = CacheName.USER, key = CacheConst.KEY_CLASS_METHOD, unless = "#result?.size() == 0")
- * Example 2: @Cacheable(value = CacheName.USER, key = CacheConst.KEY_CLASS + "+#username + 'zhangsan'", unless = "#result == null")
+ * Example 1: @Cacheable(value = CacheNames.USER, key = CacheConst.KEY_CLASS_METHOD, unless = "#result?.size() == 0")
+ * Example 2: @Cacheable(value = CacheNames.USER, key = CacheConst.KEY_CLASS + "+#username + 'zhangsan'", unless = "#result == null")
  * <p>
  * 2、使用 {@link CacheFactory}
  *
@@ -32,7 +40,39 @@ import org.springframework.context.annotation.Configuration;
 @EnableCaching
 @Configuration
 @AllArgsConstructor
-@SuppressWarnings({"rawtypes"})
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class CacheConfig {
 
+    /**
+     * 默认缓存配置属性
+     */
+    public static <K, V> javax.cache.configuration.Configuration<K, V> config(DynamicCache options) {
+        ResourcePoolsBuilder poolsBuilder = ResourcePoolsBuilder
+                // 设置缓存堆容纳元素个数(JVM内存空间)超出个数后会存到 offheap 中
+                // 基于堆大小的缓存需要打开：--add-opens=java.base/java.util=ALL-UNNAMED
+                //.heap(30, MemoryUnit.MB)
+                .heap(options.getHeapEntries())
+                // 设置堆外内存大小(直接内存) 超出 offheap 的大小会根据淘汰规则被淘汰，数值大小必须小于磁盘大小
+                //.offheap(10, MemoryUnit.MB)
+                ;
+        // 缓存数据K和V的数值类型，在ehcache3.3中必须指定缓存键值类型,如果使用中类型与配置的不同,会报类转换异常
+        CacheConfigurationBuilder<K, V> builder = CacheConfigurationBuilder.newCacheConfigurationBuilder(options.getKeyType(), options.getValueType(), poolsBuilder)
+                // 缓存监听器
+                .withService(cacheEventListener());
+
+        if (options.getExpiry() != null) {
+            // 数据最大存活时间 TTL
+            builder.withExpiry(ExpiryPolicyBuilder.timeToLiveExpiration(options.getExpiry()));
+        }
+        return Eh107Configuration.fromEhcacheCacheConfiguration(builder.build());
+    }
+
+    private static CacheEventListenerConfiguration<?> cacheEventListener() {
+        return CacheEventListenerConfigurationBuilder
+                .newEventListenerConfiguration(
+                        new DefaultCacheEventListener(), EventType.EVICTED, EventType.EXPIRED, EventType.REMOVED, EventType.CREATED, EventType.UPDATED)
+                .asynchronous()
+                .unordered()
+                .build();
+    }
 }
